[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-testing-control-server"
version = "0.1.0"
description = "control server for running the equipment in the QE closet for sensor testing"
readme = "README.md"
license = "MIT"
authors = [
  {name = "Nate Lourie"},
  {name = "Chris Layden"},
  {name = "Jonah Klein"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Windows"
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "ipykernel",
    "labjack-ljm",
    "pyyaml",
    "pyserial",
    "pyro5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",

]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["labserver"]